force-app/main/default/objects/Program__c/fields/Enrollment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Criteria__c</fullName>
    <label>Enrollment Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>