force-app/main/default/objects/Program__c/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>