force-app/main/default/objects/Program__c/fields/Taget_Audience__c.field-meta.xml
<CustomField>
    <fullName>Taget_Audience__c</fullName>
    <label>Taget Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Caregivers</fullName>
            </value>
            <value>
                <fullName>Educators</fullName>
            </value>
            <value>
                <fullName>Community Leaders</fullName>
            </value>
            <value>
                <fullName>Healthcare Professionals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>